updated to simplifed default routers, latest siftd-base, siftd-queryservice-base

--- a/app.env
+++ b/app.env
@@ -17,5 +17,7 @@ IDENTITY_SERVICE=http://localhost:8881
 #called services (for HealthChecks)
 CALLED_SERVICES=["identities.api.dev-yourcompany.com"]
 
+DEBUGSIFTD_AUTH=1
+
 # API keys (not used currently)
 #API_KEY=your_api_key
