--- a/app.env
+++ b/app.env
@@ -8,7 +8,7 @@ LISTEN_ADDRESS=localhost:8881
 LOG_LEVEL=info
 
 # Database configuration
-DB_CONNECTSTRING="user=geraldhinson password=geraldhinson dbname=unittests host=localhost port=5432"
+DB_CONNECTSTRING="user=geraldhinson password=geraldhinson dbname=ExampleQueries host=localhost port=5432"
 
 #Identity Service to call for public key and token retrieval (configured to call 'self' when running locally)
 #TODO - should I take http:// off of this and append that vs https:// in the code?
