updated to latest siftd-base/siftd-queryservice-base

--- a/app.env
+++ b/app.env
@@ -2,7 +2,15 @@
 SERVICE_INSTANCE_NAME="Data Pond 1"
 
 # Server configuration
-LISTEN_ADDRESS=localhost:8881
+LISTEN_ADDRESS=https://localhost:8881
+HTTPS_CERT_FILENAME=localhost-server.crt
+HTTPS_KEY_FILENAME=localhost-server.key
+
+#Identity Service to call for public key and token retrieval (configured to call 'self' when running locally)
+IDENTITY_SERVICE=https://localhost:8881
+
+#called services (for HealthChecks)
+CALLED_SERVICES=["identities.api.dev-yourcompany.com"]
 
 # Logging configuration
 LOG_LEVEL=info
@@ -10,14 +18,4 @@ LOG_LEVEL=info
 # Database configuration
 DB_CONNECTSTRING="user=geraldhinson password=geraldhinson dbname=ExampleQueries host=localhost port=5432"
 
-#Identity Service to call for public key and token retrieval (configured to call 'self' when running locally)
-#TODO - should I take http:// off of this and append that vs https:// in the code?
-IDENTITY_SERVICE=http://localhost:8881
-
-#called services (for HealthChecks)
-CALLED_SERVICES=["identities.api.dev-yourcompany.com"]
-
 DEBUGSIFTD_AUTH=1
-
-# API keys (not used currently)
-#API_KEY=your_api_key
