updated to siftd-base@v0.13.0

--- a/app.env
+++ b/app.env
@@ -2,12 +2,12 @@
 SERVICE_INSTANCE_NAME="Data Pond 1"
 
 # Server configuration
-LISTEN_ADDRESS=https://localhost:8881
+LISTEN_ADDRESS=http://localhost:8881
 HTTPS_CERT_FILENAME=localhost-server.crt
 HTTPS_KEY_FILENAME=localhost-server.key
 
 #Identity Service to call for public key and token retrieval (configured to call 'self' when running locally)
-IDENTITY_SERVICE=https://localhost:8881
+IDENTITY_SERVICE=http://localhost:8881
 
 #called services (for HealthChecks)
 CALLED_SERVICES=["identities.api.dev-yourcompany.com"]
