updated to latest of siftd-base and siftd-queryservice-base

--- a/app.env
+++ b/app.env
@@ -19,3 +19,5 @@ LOG_LEVEL=info
 DB_CONNECTSTRING="user=geraldhinson password=geraldhinson dbname=ExampleQueries host=localhost port=5432"
 
 DEBUGSIFTD_AUTH=1
+DEBUGSIFTD_QUERYSERVICE_HELPERS=1
+DEBUGSIFTD_QUERYSERVICE_STORE=1
