--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "main.go",
+            "program": "queries.go",
             "env": {
                 "RESDIR_PATH": "${workspaceFolder}",
             },
